--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@ show_excerpts: true
 theme: minima
 plugins:
   - jekyll-feed
-#markdown: kramdown
+# markdown: kramdown # Apparently adding kramdown as markdown processor
+                     # causes GitHub pages to iterate through posts and pages twice
 permalink: /posts/:title
-#paginate: 5
+paginate: 5
 
 # Exclude from processing.
 # The following items will not be processed, by default.
