--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 shortdesc: "A lot of amazing stuff."
 baseurl: ""
 url: "https://furfel.com"
-twitter_username: __local
+twitter_username: foorfel
 twitter:
-  username: __local
+  username: foorfel
 github_username:  furfel
 rss: Atom feed
 
